--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dify:export": "tsx scripts/dify-cli.ts export",
     "dify:import": "tsx scripts/dify-cli.ts import",
     "dify:logout": "tsx scripts/dify-cli.ts logout",
+    "fetch:note-articles": "tsx scripts/fetch-note-articles.ts",
     "test": "vitest run",
     "test:watch": "vitest",
     "test:integration": "INTEGRATION_TEST=true vitest run",
