mod: add sumary flow

--- a/dify-settings/dsl/postchecker.yml
+++ b/dify-settings/dsl/postchecker.yml
@@ -197,12 +197,82 @@ workflow:
     - data:
         isInIteration: false
         isInLoop: false
+        sourceType: llm
+        targetType: template-transform
+      id: 1769264824818-source-1769264927152-target
+      selected: false
+      source: '1769264824818'
+      sourceHandle: source
+      target: '1769264927152'
+      targetHandle: target
+      type: custom
+      zIndex: 0
+    - data:
+        isInLoop: false
         sourceType: template-transform
-        targetType: end
-      id: 1769256163730-source-1769256488676-target
+        targetType: template-transform
+      id: 1769256163730-source-1769264927152-target
+      selected: false
       source: '1769256163730'
       sourceHandle: source
-      target: '1769256488676'
+      target: '1769264927152'
+      targetHandle: target
+      type: custom
+      zIndex: 0
+    - data:
+        isInIteration: false
+        isInLoop: false
+        sourceType: template-transform
+        targetType: end
+      id: 1769264927152-source-1769265182872-target
+      selected: false
+      source: '1769264927152'
+      sourceHandle: source
+      target: '1769265182872'
+      targetHandle: target
+      type: custom
+      zIndex: 0
+    - data:
+        isInLoop: false
+        sourceType: llm
+        targetType: llm
+      id: 1769253839816-source-1769264824818-target
+      source: '1769253839816'
+      sourceHandle: source
+      target: '1769264824818'
+      targetHandle: target
+      type: custom
+      zIndex: 0
+    - data:
+        isInLoop: false
+        sourceType: llm
+        targetType: llm
+      id: 1769255396970-source-1769264824818-target
+      source: '1769255396970'
+      sourceHandle: source
+      target: '1769264824818'
+      targetHandle: target
+      type: custom
+      zIndex: 0
+    - data:
+        isInLoop: false
+        sourceType: llm
+        targetType: llm
+      id: 1769255589411-source-1769264824818-target
+      source: '1769255589411'
+      sourceHandle: source
+      target: '1769264824818'
+      targetHandle: target
+      type: custom
+      zIndex: 0
+    - data:
+        isInLoop: false
+        sourceType: llm
+        targetType: llm
+      id: 1769255623283-source-1769264824818-target
+      source: '1769255623283'
+      sourceHandle: source
+      target: '1769264824818'
       targetHandle: target
       type: custom
       zIndex: 0
@@ -519,17 +589,14 @@ workflow:
       positionAbsolute:
         x: 683
         y: 665.121375480874
-      selected: true
+      selected: false
       sourcePosition: right
       targetPosition: left
       type: custom
       width: 241
     - data:
         selected: false
-        template: '# 🗳️ ファクトチェック＆リスク判定レポート
-
-
-          **対象テキスト:**
+        template: '**対象テキスト:**
 
           {{ query }}
 
@@ -553,13 +620,8 @@ workflow:
 
           {{risk}}
 
-
-          ---
-
-          **総合判定:**
-
-          以上のチェック結果を踏まえ、投稿の可否を最終判断してください。'
-        title: アウトプット整形
+          '
+        title: チェック内容の集約
         type: template-transform
         variables:
         - value_selector:
@@ -589,10 +651,10 @@ workflow:
       height: 50
       id: '1769256163730'
       position:
-        x: 984
+        x: 1027.8060193286685
         y: 282
       positionAbsolute:
-        x: 984
+        x: 1027.8060193286685
         y: 282
       selected: false
       sourcePosition: right
@@ -600,30 +662,119 @@ workflow:
       type: custom
       width: 241
     - data:
-        outputs:
-        - value_selector:
-          - '1769256163730'
-          - output
-          value_type: string
-          variable: result
+        context:
+          enabled: false
+          variable_selector: []
+        model:
+          completion_params:
+            temperature: 0.7
+          mode: chat
+          name: qwen2.5:32b
+          provider: langgenius/ollama/ollama
+        prompt_template:
+        - id: 742fbdbf-42cb-411c-a1e7-87934843ca5f
+          role: system
+          text: "あなたは選挙事務所の「選対本部長」です。 \nユーザー（候補者やスタッフ）が作成したSNS投稿案に対して、各専門家（弁護士、政策秘書、リスク担当など）がチェックを行いました。\n\
+            提供された「専門家レポート（Context）」を総合的に分析し、ユーザーに対して分かりやすいフィードバックを行ってください。 \nやることは以下のタスクのみとし、修正例の提示は行わないでください。\n\
+            \n## 参照する専門家レポート\n### 公職選挙法チェック\n{{#1769253839816.text#}}\n### 政策ビジョンの整合性チェック\n\
+            {{#1769255396970.text#}}\n### 公式発言との一致確認\n{{#1769255589411.text#}}\n###\
+            \ 炎上リスク判定\n{{#1769255623283.text#}}\n\n## あなたのタスク \n専門家の意見をそのままコピペするのではなく、以下の構成で分かりやすく伝えてください。\
+            \ \n1. **結論（Go / No-Go）** \n- 投稿して問題ないか、修正必須か、投稿すべきでないかをズバリ判定。 \n2. **重要な指摘事項（要約）**\
+            \ \n- 専門家レポートの中で、特に致命的なリスク（公選法違反や炎上リスク）があれば簡潔に指摘。 \n- 些末な指摘は無視して、重要なポイントのみに絞る。\
+            \ \n\n"
         selected: false
-        title: 出力
-        type: end
-      height: 87
-      id: '1769256488676'
+        title: 総括
+        type: llm
+        vision:
+          enabled: false
+      height: 86
+      id: '1769264824818'
       position:
-        x: 1285
-        y: 282
+        x: 1027.8060193286685
+        y: 392.9968420437926
       positionAbsolute:
-        x: 1285
-        y: 282
+        x: 1027.8060193286685
+        y: 392.9968420437926
       selected: false
       sourcePosition: right
       targetPosition: left
       type: custom
       width: 241
+    - data:
+        selected: false
+        template: '# 🗳️ ファクトチェック＆リスク判定
+
+
+          ## 総括
+
+          {{ summary }}
+
+
+          ---
+
+
+          ## 詳細レポート
+
+          {{ output }}
+
+
+          ---
+
+
+          以上のチェック結果を踏まえ、投稿の可否を最終判断してください。
+
+          '
+        title: アウトプット整形
+        type: template-transform
+        variables:
+        - value_selector:
+          - '1769264824818'
+          - text
+          value_type: string
+          variable: summary
+        - value_selector:
+          - '1769256163730'
+          - output
+          value_type: string
+          variable: output
+      height: 50
+      id: '1769264927152'
+      position:
+        x: 1402.6424484929998
+        y: 282
+      positionAbsolute:
+        x: 1402.6424484929998
+        y: 282
+      selected: true
+      sourcePosition: right
+      targetPosition: left
+      type: custom
+      width: 241
+    - data:
+        outputs:
+        - value_selector:
+          - '1769264927152'
+          - output
+          value_type: string
+          variable: output
+        selected: false
+        title: 出力
+        type: end
+      height: 87
+      id: '1769265182872'
+      position:
+        x: 1711.464951944548
+        y: 282
+      positionAbsolute:
+        x: 1711.464951944548
+        y: 282
+      selected: true
+      sourcePosition: right
+      targetPosition: left
+      type: custom
+      width: 241
     viewport:
-      x: 21.004135455752248
-      y: 72.95930288601599
-      zoom: 1.0726022829847892
+      x: -632.0523420687559
+      y: 43.3933054750637
+      zoom: 1.1392358545721186
   rag_pipeline_variables: []
